# python-better-life

./: README.md  pyproject.toml
better_life/: book.py  interpark_ticket_notify_remain_seats.py  notify_uniqlo_sale.py  telegrambot.py
