[project]
name = "python-better-life"
version = "0.1.0"
description = ""
authors = [
    {name = "jihye", email = "ghe.lee19@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "python-telegram-bot>=20.4",
    "pandas>=2.0.3"
]

[project.optional-dependencies]
[tool.uv]
package = false
default-groups = "all"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
